--- a/themes/osuny-school/assets/sass/components/_hero.sass
+++ b/themes/osuny-school/assets/sass/components/_hero.sass
@@ -1,6 +1,6 @@
 .hero
     align-items: flex-end
-    background-color: var(--color)
+    background-color: $site
     background-image: url(/assets/images/glyph.svg)
     background-position: right
     background-repeat: no-repeat
