--- a/themes/osuny-school/layouts/partials/post.html
+++ b/themes/osuny-school/layouts/partials/post.html
@@ -9,7 +9,7 @@
               "size_desktop"  "634x317"
             ) -}}
     {{- else -}}
-      {% picture thumb default.jpg %}
+      <img src="/assets/images/default.jpg" alt="">
     {{- end -}}
   </div>
   <div class="card-body">
