--- a/themes/osuny-school/layouts/partials/article.html
+++ b/themes/osuny-school/layouts/partials/article.html
@@ -1,1 +1,8 @@
-{{.Title}}
+<div class="card card--article">
+  <div class="card-body">
+    <p class="card-title"><a href="{{ .Permalink }}" class="stretched-link link link--more">{{ htmlUnescape .Title }}</a></p>
+    {{ if .Params.description }}
+      <p class="card-text">{{ truncate 120 .Params.description }}</p>
+    {{ end }}
+  </div>
+</div>
