--- a/themes/osuny-school/layouts/programs/list.html
+++ b/themes/osuny-school/layouts/programs/list.html
@@ -1,5 +1,9 @@
 {{ define "main" }}
-  {{- partial "hero.html" . -}}
+  {{- partial "hero.html"
+        (dict
+          "title" .Title
+          "image" .Params.image
+        ) -}}
   <div class="container">
     {% assign programs = site.programs | where_exp: "item", "item.parent != nil" | where: "parent", "" | sort: "position" %}
     {% include programs.html programs=programs level=1 %}
