--- a/themes/osuny-school/layouts/_default/single.html
+++ b/themes/osuny-school/layouts/_default/single.html
@@ -1,41 +1,28 @@
 {{ define "main" }}
-{{- partial "hero.html" . -}}
+{{- partial "hero.html"
+      (dict
+        "title" .Title
+        "image" .Params.image
+      ) -}}
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-lg-3">
-      <table class="table mb-4" aria-label="Informations">
-        <tbody class="border-top">
-          <tr>
-            <th scope="row" class="ps-0">Date</th>
-            <td class="pe-0">
-              <time datetime="{{ .Date.Format "2006-01-02T15:04" }}">{{ .Date.Format "02 Jan 2006" }}</time>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row" class="ps-0">Partager</th>
-            <td class="pe-0">
-              <a href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" target="_blank" rel="noreferrer"><img src="/assets/images/icon-facebook.svg" alt="Facebook" width="20" height="20"></a>
-              <a class="ms-3" href="https://www.linkedin.com/sharing/share-offsite/?url={{ .Permalink }}" target="_blank" rel="noreferrer"><img src="/assets/images/icon-linkedin.svg" alt="Linkedin" width="18" height="18"></a>
-              <a class="ms-3" href="https://twitter.com/intent/tweet?text={{ .Title }} {{ .Permalink }}" target="_blank" rel="noreferrer"><img src="/assets/images/icon-twitter.svg" alt="Twitter" width="21" height="17"></a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
     </div>
     <div class="col-md-8 offset-lg-1">
-      {% if page.image %}
-        {% include image.html
-            image=page.image
-            size_mobile='351x168'
-            size_tablet='456x219'
-            size_desktop='856x410'
-            class='img-fluid mb-4'
-            itemprop=true %}
-      {% endif %}
+      {{ if .Params.image }}
+        {{ partial "image.html"
+              (dict
+                "image"         .Params.image
+                "size_mobile"   "351x168"
+                "size_tablet"   "456x219"
+                "size_desktop"  "856x410"
+                "class"         "img-fluid mb-4"
+                "itemprop"      true
+              )}}
+      {{ end }}
       <div itemprop="articleBody">
         {{ safeHTML .Params.text }}
       </div>
-      {% include post-pagination.html %}
     </div>
   </div>
 </div>
