--- a/themes/osuny-school/layouts/partials/hero.html
+++ b/themes/osuny-school/layouts/partials/hero.html
@@ -1,9 +1,8 @@
-{{ $title := or .Title .Description }}
 <header class="hero">
-  {{ if .Params.image }}
+  {{ if .image }}
     {{ partial "image.html"
         (dict
-          "image"         .Params.image
+          "image"         .image
           "size_mobile"   "375x450"
           "size_tablet"   "768x450"
           "size_desktop"  "x450"
@@ -14,7 +13,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <h1>{{ safeHTML $title }}</h1>
+        <h1>{{ safeHTML .title }}</h1>
       </div>
     </div>
     <div class="hero__nav">
