--- a/themes/osuny-school/layouts/persons/list.html
+++ b/themes/osuny-school/layouts/persons/list.html
@@ -3,6 +3,7 @@
         (dict
           "title" .Title
           "image" .Params.image
+          "context" .
         ) -}}
   <div class="container">
     <h2>Enseignants</h2>
