--- a/themes/osuny-school/layouts/persons/single.html
+++ b/themes/osuny-school/layouts/persons/single.html
@@ -2,6 +2,7 @@
 {{- partial "hero.html"
       (dict
         "title" .Title
+        "context" .
       ) -}}
 <div class="container">
   <div class="row">
