--- a/themes/osuny-school/layouts/posts/single.html
+++ b/themes/osuny-school/layouts/posts/single.html
@@ -3,6 +3,7 @@
       (dict
         "title" .Title
         "image" .Params.image
+        "context" .
       ) -}}
 <div class="container">
   <div class="row">
