--- a/themes/osuny-school/layouts/categories/list.html
+++ b/themes/osuny-school/layouts/categories/list.html
@@ -2,6 +2,7 @@
   {{- partial "hero.html"
         (dict
           "title" .Title
+          "context" .
         ) -}}
   <div class="container">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-5">
