--- a/themes/osuny-school/layouts/index.html
+++ b/themes/osuny-school/layouts/index.html
@@ -3,6 +3,7 @@
         (dict
           "title" .Content
           "image" .Params.image
+          "context" .
         )}}
   <div class="container">
     {{- range site.Data.menus.primary -}}
@@ -25,14 +26,7 @@
           <div class="row row-cols-1 row-cols-md-2">
             {{ range .children }}
               {{ if and .target (not (eq .kind "url")) }}
-                {{ $page := "" }}
-                {{ $target := .target }}
-                {{ range site.Pages }}
-                  {{ $pageTarget := strings.TrimSuffix "/" .RelPermalink }}
-                  {{ if eq $pageTarget $target }}
-                    {{ $page = . }}
-                  {{ end }}
-                {{ end }}
+                {{ $page := partial "utils/GetPageByUrl.html" .target }}
                 {{ if $page }}
                   <div class="col">
                     {{ partial "pages/page.html" $page }}
