--- a/themes/osuny-school/layouts/posts/list.html
+++ b/themes/osuny-school/layouts/posts/list.html
@@ -3,6 +3,7 @@
         (dict
           "title" .Title
           "image" .Params.image
+          "context" .
         ) -}}
   <div class="container">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-5">
