--- a/themes/osuny-school/layouts/pages/single.html
+++ b/themes/osuny-school/layouts/pages/single.html
@@ -8,6 +8,15 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-lg-3">
+      <ul class="nav toc" id="nav-toc">
+        <li class="nav-item"><a class="nav-link" href="#page-informations">Informations</a></li>
+        {{ if .Params.child_pages }}
+        <li class="nav-item"><a class="nav-link" href="#page-children">En détail</a></li>
+        {{ end }}
+        {{ range .GetTerms "categories" }}
+        <li class="nav-item"><a class="nav-link" href="#page-posts">Actualités</a></li>
+        {{ end }}
+      </ul>
     </div>
     <div class="col-md-8 offset-lg-1">
       {{ if .Params.image }}
@@ -21,8 +30,39 @@
                 "itemprop"      true
               )}}
       {{ end }}
-      <div itemprop="articleBody">
+      <div itemprop="articleBody" id="page-informations">
         {{ .Content }}
+
+        {{ if .Params.child_pages }}
+        <hr class="my-5">
+        <div class="top">
+          <h2 id="page-children">En détail</h2>
+        </div>
+        <div class="row row-cols-md-2 g-3">
+          {{ range .Params.child_pages }}
+            {{ $page := partial "utils/GetPageByUrl.html" . }}
+            <div class="col">
+              <a href="{{ $page.Permalink }}">{{ htmlUnescape $page.Title }}</a>
+            </div>
+          {{ end }}
+        </div>
+        {{ end }}
+
+        {{ range .GetTerms "categories" }}
+        <hr class="my-5">
+        <div class="top">
+          <h2 id="page-posts">Actualités</h2>
+          <a href="{{ .Permalink }}" class="link link--more">Voir toutes les actualités «&nbsp;{{ .Title }}&nbsp;»</a></div>
+          <div class="row row-cols-1 row-cols-md-2 gy-5">
+            {{ range .Paginator.Pages }}
+              <div class="col">
+                {{ partial "posts/post.html" . }}
+              </div>
+            {{ end }}
+          </div>
+          {{ template "_internal/pagination.html" . }}
+        </div>
+        {{ end }}
       </div>
     </div>
   </div>
