--- a/themes/osuny-school/layouts/pages/single.html
+++ b/themes/osuny-school/layouts/pages/single.html
@@ -49,19 +49,7 @@
         {{ end }}
 
         {{ range .GetTerms "categories" }}
-        <hr class="my-5">
-        <div class="top">
-          <h2 id="page-posts">Actualités</h2>
-          <a href="{{ .Permalink }}" class="link link--more">Voir toutes les actualités «&nbsp;{{ .Title }}&nbsp;»</a></div>
-          <div class="row row-cols-1 row-cols-md-2 gy-5">
-            {{ range .Paginator.Pages }}
-              <div class="col">
-                {{ partial "posts/post.html" . }}
-              </div>
-            {{ end }}
-          </div>
-          {{ template "_internal/pagination.html" . }}
-        </div>
+          {{ partial "posts/related.html" .}}
         {{ end }}
       </div>
     </div>
