--- a/themes/osuny-school/layouts/programs/list.html
+++ b/themes/osuny-school/layouts/programs/list.html
@@ -6,7 +6,97 @@
           "context" .
         ) -}}
   <div class="container">
-    {% assign programs = site.programs | where_exp: "item", "item.parent != nil" | where: "parent", "" | sort: "position" %}
-    {% include programs.html programs=programs level=1 %}
+    {{ if .Params.level }}
+    <div class="row">
+      <div class="col-md-4 col-lg-3">
+        <ul class="nav toc" id="nav-toc">
+          <li class="nav-item"><a class="nav-link" href="#page-informations">Informations</a></li>
+          <li class="nav-item"><a class="nav-link" href="#page-contacts">Contacts</a></li>
+          <li class="nav-item"><a class="nav-link" href="#page-pedagogy">Pédagogie</a></li>
+          <li class="nav-item"><a class="nav-link" href="#page-candidates">Candidature</a></li>
+          {{ if .Pages }}
+          <li class="nav-item"><a class="nav-link" href="#page-programs">Formations</a></li>
+          {{ end }}
+          {{ range .GetTerms "categories" }}
+          <li class="nav-item"><a class="nav-link" href="#page-posts">Actualités</a></li>
+          {{ end }}
+        </ul>
+      </div>
+      <div class="col-md-8 offset-lg-1">
+        {{ if .Params.image }}
+          {{ partial "image.html"
+                (dict
+                  "image"         .Params.image
+                  "size_mobile"   "351x168"
+                  "size_tablet"   "456x219"
+                  "size_desktop"  "856x410"
+                  "class"         "img-fluid mb-4"
+                  "itemprop"      true
+                )}}
+        {{ end }}
+        <div itemprop="articleBody">
+          <h2 id="page-informations">Informations</h2>
+          {{ safeHTML .Params.opportunities }}
+          {{ safeHTML .Params.other }}
+
+          <h2 id="page-contacts">Contacts</h2>
+          {{ safeHTML .Params.contacts }}
+
+          <h2 id="page-pedagogy">Pédagogie</h2>
+          {{ safeHTML .Params.pricing }}
+          {{ safeHTML .Params.registration }}
+
+          <h2 id="page-candidates">Candidature</h2>
+          {{ safeHTML .Params.evaluation }}
+          {{ safeHTML .Params.objectives }}
+          {{ safeHTML .Params.prerequisites }}
+
+          {{ if .Pages }}
+          <hr class="my-5">
+          <div class="top">
+            <h2 id="page-programs">Formations</h2>
+          </div>
+          <div class="row row-cols-md-2 g-3">
+            {{ range sort .Pages ".Params.position" }}
+            <div class="col">
+              <a href="{{ .Permalink }}">{{ htmlUnescape .Title }}</a>
+            </div>
+            {{ end }}
+          </div>
+          {{ end }}
+
+          {{ range .GetTerms "categories" }}
+            {{ partial "posts/related.html" .}}
+          {{ end }}
+        </div>
+      </div>
+    </div>
+    {{ else }}
+      {{ range sort .Pages ".Params.position" }}
+        <div class="row row-cols-1 row-cols-md-2 mb-4">
+          <div class="col-md-8">
+            <div class="card card--program">
+              <div class="card-body">
+                <h2 class="card-title ">
+                  <a href="{{ .Permalink }}">{{ htmlUnescape .Title }}</a>
+                </h2>
+              </div>
+            </div>
+          </div>
+          {{ range sort .Pages ".Params.position"  }}
+          <div class="col">
+            <div class="card card--program">
+              <div class="card-body">
+                <p class="card-title ">
+                  <a href="{{ .Permalink }}" class="link link--more">{{ htmlUnescape .Title }}</a>
+                </p>
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          {{ end }}
+        </div>
+      {{ end }}
+    {{ end }}
   </div>
 {{ end }}
