--- a/themes/osuny-school/layouts/_default/list.html
+++ b/themes/osuny-school/layouts/_default/list.html
@@ -9,7 +9,9 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-5">
       {{ range .Paginator.Pages }}
         <div class="col">
-          {{ partial "posts/post.html" . }}
+          <h2>
+            <a href="{{ .Permalink }}">{{ .Title }}</a>
+          </h2>
         </div>
       {{ end }}
     </div>
