--- a/themes/osuny-school/layouts/categories/list.html
+++ b/themes/osuny-school/layouts/categories/list.html
@@ -11,7 +11,7 @@
           <article class="card">
             <div class="card-body">
               <p class="card-title">{{ htmlUnescape .Title }}</p>
-              <a href="{{ .Permalink }}" class="stretched-link link link--more">En savoir plus</a>
+              <a href="{{ .Permalink }}" class="stretched-link link link--more">Voir les {{ len .Pages }} articles</a>
             </div>
           </article>
         </div>
