--- a/themes/osuny-school/layouts/partials/footer/footer.html
+++ b/themes/osuny-school/layouts/partials/footer/footer.html
@@ -18,7 +18,7 @@
         {{ end }}
       </div>
     </div>
-    {{ partial "menu.html"
+    {{ partial "commons/menu.html"
           (dict
             "items"       site.Data.menus.primary
             "level"       1
