--- a/themes/osuny-school/layouts/programs/list.html
+++ b/themes/osuny-school/layouts/programs/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  {{- partial "hero.html"
+  {{- partial "header/hero.html"
         (dict
           "title" .Title
           "image" .Params.image
@@ -24,7 +24,7 @@
       </div>
       <div class="col-md-8 offset-lg-1">
         {{ if .Params.image }}
-          {{ partial "image.html"
+          {{ partial "commons/image.html"
                 (dict
                   "image"         .Params.image
                   "size_mobile"   "351x168"
