--- a/themes/osuny-school/layouts/404.html
+++ b/themes/osuny-school/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  {{ partial "hero.html"
+  {{ partial "header/hero.html"
         (dict
           "title" "404 page not found"
           "context" .
