--- a/themes/osuny-school/layouts/_default/baseof.html
+++ b/themes/osuny-school/layouts/_default/baseof.html
@@ -8,13 +8,13 @@
     {{- partial "head/ga.html" -}}
   </head>
   <body class="{{ .Type }}__{{ .Kind }}">
-    {{- partial "accessibility.html" -}}
-    {{- partial "header.html" -}}
+    {{- partial "header/accessibility.html" -}}
+    {{- partial "header/header.html" -}}
     <main class="main" id="main" aria-label="Content">
       {{- block "main" . }}{{- end }}
     </main>
-    {{- partial "footer.html" . -}}
-    {{- partial "cookie-banner.html" . -}}
-    {{- partial "js.html" . -}}
+    {{- partial "footer/footer.html" . -}}
+    {{- partial "footer/cookie-banner.html" . -}}
+    {{- partial "footer/js.html" . -}}
   </body>
 </html>
