--- a/themes/osuny-school/layouts/authors/term.html
+++ b/themes/osuny-school/layouts/authors/term.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  {{- partial "hero.html"
+  {{- partial "header/hero.html"
         (dict
           "title" .Title
           "context" .
