--- a/themes/osuny-school/layouts/partials/header/hero.html
+++ b/themes/osuny-school/layouts/partials/header/hero.html
@@ -1,6 +1,6 @@
 <header class="hero">
   {{ if .image }}
-    {{ partial "image.html"
+    {{ partial "commons/image.html"
         (dict
           "image"         .image
           "size_mobile"   "375x450"
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="hero__nav">
-      {{ partial "breadcrumbs.html" . }}
+      {{ partial "header/breadcrumbs.html" . }}
     </div>
   </div>
 </header>
