--- a/themes/osuny-school/layouts/partials/posts/post.html
+++ b/themes/osuny-school/layouts/partials/posts/post.html
@@ -1,7 +1,7 @@
 <article class="card">
   <div class="card-media">
     {{- if .Params.image -}}
-      {{- partial "image.html"
+      {{- partial "commons/image.html"
             (dict
               "image"         .Params.image
               "size_mobile"   "375x450"
