--- a/themes/osuny-school/layouts/pages/single.html
+++ b/themes/osuny-school/layouts/pages/single.html
@@ -40,7 +40,7 @@
         </div>
         <div class="row row-cols-md-2 g-3">
           {{ range .Params.child_pages }}
-            {{ $page := partial "utils/GetPageByUrl.html" . }}
+            {{ $page := partial "GetPageByUrl" . }}
             <div class="col">
               <a href="{{ $page.Permalink }}">{{ htmlUnescape $page.Title }}</a>
             </div>
