--- a/themes/osuny-school/layouts/partials/head/seo.html
+++ b/themes/osuny-school/layouts/partials/head/seo.html
@@ -5,7 +5,8 @@
 {{ $seoDescription := .Params.description | chomp }}
 {{ $seoImage := "/assets/images/share.png" }}
 {{ if .Params.image }}
-  {{ $seoImage = partial "utils/GetMedia.html" .Params.image }}
+  {{ $image := partial "GetMedia" .Params.image}}
+  {{ $seoImage = $image.url }}
 {{ end }}
 {{ $seoUrl := .Permalink }}
 
