--- a/themes/osuny-school/layouts/partials/posts/post.html
+++ b/themes/osuny-school/layouts/partials/posts/post.html
@@ -7,6 +7,7 @@
               "size_mobile"   "375x450"
               "size_tablet"   "334x167"
               "size_desktop"  "634x317"
+              "alt"           .Title
             ) -}}
     {{- else -}}
       <img src="/assets/images/default.jpg" alt="">
