--- a/themes/osuny-school/layouts/partials/commons/image.html
+++ b/themes/osuny-school/layouts/partials/commons/image.html
@@ -1,17 +1,48 @@
 {{- if .image }}
   {{- $image := partial "GetMedia" .image -}}
   {{- if $image -}}
-    {{- $lazy := true -}}
-    {{- if .no_lazy }}{{ $lazy = false }}{{ end -}}
+    {{- $url := $image.url -}}
+    {{- $lazy := default true .lazy -}}
     {{- $alt := or .alt "" -}}
     {{- $width := $image.width -}}
     {{- $height := $image.height -}}
     <picture>
-      <img  src="{{ $image.url }}" alt="{{ $alt }}" width="{{ $width }}" height="{{ $height }}"
-            {{- if .class }} class="{{ .class }}"{{- end -}}
-            {{- if $lazy }} loading="lazy"{{- end -}}
-            {{- if .itemprop }} itemprop="image"{{- end -}}
-            >
+      {{ with .desktop -}}
+      <source srcset="{{ partial "GetImageUrl" (dict "url" $url "size" . "format" "webp") }},
+                      {{ partial "GetImageUrl" (dict "url" $url "size" . "format" "webp" "scale" 2) }} 2x"
+                      media="(min-width: 1024px)" type="image/webp">
+      {{- end }}
+      {{ with .tablet -}}
+      <source srcset="{{ partial "GetImageUrl" (dict "url" $url "size" . "format" "webp") }},
+                      {{ partial "GetImageUrl" (dict "url" $url "size" . "format" "webp" "scale" 2) }} 2x"
+                      media="(min-width: 768px)" type="image/webp">
+      {{- end }}
+      {{ with .mobile -}}
+      <source srcset="{{ partial "GetImageUrl" (dict "url" $url "size" . "format" "webp") }},
+                      {{ partial "GetImageUrl" (dict "url" $url "size" . "format" "webp" "scale" 2) }} 2x"
+                      type="image/webp">
+      {{- end }}
+
+      {{ with .desktop -}}
+      <source srcset="{{ partial "GetImageUrl" (dict "url" $url "size" . ) }},
+                      {{ partial "GetImageUrl" (dict "url" $url "size" . "scale" 2) }} 2x"
+                      media="(min-width: 1024px)">
+      {{- end }}
+      {{ with .tablet -}}
+      <source srcset="{{ partial "GetImageUrl" (dict "url" $url "size" . ) }},
+                      {{ partial "GetImageUrl" (dict "url" $url "size" . "scale" 2) }} 2x"
+                      media="(min-width: 768px)">
+      {{- end }}
+      {{ with .mobile -}}
+      <source srcset="{{ partial "GetImageUrl" (dict "url" $url "size" . ) }},
+                      {{ partial "GetImageUrl" (dict "url" $url "size" . "scale" 2) }} 2x">
+      {{- end }}
+
+      <img src="{{ $url }}" alt="{{ $alt }}" width="{{ $width }}" height="{{ $height }}"
+           {{- if .class }} class="{{ .class }}"{{- end -}}
+           {{- if $lazy }} loading="lazy"{{- end -}}
+           {{- if .itemprop }} itemprop="image"{{- end -}}
+           >
     </picture>
   {{- end -}}
 {{ end -}}
