color for parts

--- a/themes/osuny-school/assets/sass/main.sass
+++ b/themes/osuny-school/assets/sass/main.sass
@@ -4,6 +4,7 @@
 @import "commons/fonts"
 @import "commons/global"
 @import "commons/typography"
+@import "commons/pages"
 @import "bootstrap/blockquote"
 @import "bootstrap/breadcrumb"
 @import "bootstrap/card"
