--- a/themes/osuny-school/assets/sass/components/_hero.sass
+++ b/themes/osuny-school/assets/sass/components/_hero.sass
@@ -1,23 +1,27 @@
 .hero
     align-items: flex-end
     background-color: $site
-    background-image: url(/assets/images/glyph.svg)
-    background-position: right
-    background-repeat: no-repeat
-    background-size: auto 100%
     color: $white
     display: flex
-    height: 450px
-    margin-bottom: $grid-gutter-width * 2.5
+    min-height: 300px
+    margin-bottom: $grid-gutter-width * 1.5
     overflow: hidden
-    padding-bottom: $grid-gutter-width * 2.5
+    padding-bottom: $grid-gutter-width * 1.5
+    padding-top: $grid-gutter-width * 1.5
     position: relative
+    @include media-breakpoint-up(md)
+        background-image: url(/assets/images/glyph.svg)
+        background-position: right
+        background-repeat: no-repeat
+        background-size: auto 100%
+        min-height: 450px
     &__image
-        filter: blur(16px)
+        filter: blur(16px) grayscale(100%)
         height: 100%
         left: 0
+        mix-blend-mode: overlay
         object-fit: cover
-        opacity: .2
+        opacity: .3
         position: absolute
         top: 0
         width: 100%
