--- a/themes/osuny-school/layouts/authors/list.html
+++ b/themes/osuny-school/layouts/authors/list.html
@@ -9,13 +9,15 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
     {{ range .Pages }}
       <div class="col">
-        <div class="card mb-5">
-          <h2 class="mb-2">{{ .Params.first_name }} {{ .Params.last_name }}</h2>
-          {{ if .Params.biography }}
-            <p class="mb-2">{{ truncate 50 .Params.biography }}</p>
-          {{ end }}
-          <a href="{{ .Permalink }}" class="stretched-link link link--more">En savoir plus</a>
-        </div>
+        <article class="card mb-4">
+          <div class="card-body">
+            <p class="card-title">{{ .Params.first_name }} {{ .Params.last_name }}</p>
+            {{ if .Params.biography }}
+              <p class="small mb-2">{{ truncate 50 .Params.biography }}</p>
+            {{ end }}
+            <a href="{{ .Permalink }}" class="stretched-link link link--more">Voir les {{ len .Pages }} articles</a>
+          </div>
+        </article>
       </div>
     {{ end }}
   </div>
