--- a/themes/osuny-school/layouts/pages/single.html
+++ b/themes/osuny-school/layouts/pages/single.html
@@ -7,7 +7,7 @@
       ) -}}
 <div class="container">
   <div class="row">
-    <div class="col-md-4 col-lg-3">
+    <div class="col-md-4 col-lg-3 mb-4">
       <ul class="nav toc" id="nav-toc">
         <li class="nav-item"><a class="nav-link" href="#page-informations">Informations</a></li>
         {{ if .Params.child_pages }}
