--- a/themes/osuny-school/layouts/_default/single.html
+++ b/themes/osuny-school/layouts/_default/single.html
@@ -11,7 +11,7 @@
       </div>
       <div class="col-md-8 offset-lg-1">
         {{ if .Params.image }}
-          {{ partial "image.html"
+          {{ partial "commons/image.html"
                 (dict
                   "image"    .Params.image
                   "class"    "img-fluid mb-4"
