--- a/themes/osuny-school/layouts/_default/single.html
+++ b/themes/osuny-school/layouts/_default/single.html
@@ -22,7 +22,7 @@
                 )}}
         {{ end }}
         <div itemprop="articleBody">
-          {{ .Content }}
+          {{ safeHTML (partial "CorrectPunctuation" .Content) }}
         </div>
       </div>
     </div>
