--- a/themes/osuny-school/layouts/_default/list.html
+++ b/themes/osuny-school/layouts/_default/list.html
@@ -10,7 +10,7 @@
       {{ range .Paginator.Pages }}
         <div class="col">
           <h2>
-            <a href="{{ .Permalink }}">{{ .Title }}</a>
+            <a href="{{ .Permalink }}">{{ safeHTML (partial "CorrectPunctuation" .Title) }}</a>
           </h2>
         </div>
       {{ end }}
