--- a/themes/osuny-school/layouts/pages/list.html
+++ b/themes/osuny-school/layouts/pages/list.html
@@ -31,20 +31,20 @@
                 )}}
         {{ end }}
         <div itemprop="articleBody" id="page-informations">
-          {{ .Content }}
+          {{ safeHTML (partial "CorrectPunctuation" .Content) }}
 
           {{ if .Pages }}
-          <hr class="my-5">
-          <div class="top">
-            <h2 id="page-children">En détail</h2>
-          </div>
-          <div class="row row-cols-md-2 g-3">
-            {{ range sort .Pages ".Params.position"  }}
-              <div class="col">
-                <a href="{{ .Permalink }}">{{ htmlUnescape .Title }}</a>
-              </div>
-            {{ end }}
-          </div>
+            <hr class="my-5">
+            <div class="top">
+              <h2 id="page-children">En détail</h2>
+            </div>
+            <div class="row row-cols-md-2 g-3">
+              {{ range sort .Pages ".Params.position"  }}
+                <div class="col">
+                  <a href="{{ .Permalink }}">{{ safeHTML (partial "CorrectPunctuation" .Title) }}</a>
+                </div>
+              {{ end }}
+            </div>
           {{ end }}
 
           {{ range .GetTerms "categories" }}
