--- a/themes/osuny-school/layouts/partials/header/hero.html
+++ b/themes/osuny-school/layouts/partials/header/hero.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <h1>{{ safeHTML .title }}</h1>
+        <h1>{{ safeHTML (partial "CorrectPunctuation" .title) }}</h1>
       </div>
     </div>
     <div class="hero__nav">
