--- a/themes/osuny-school/layouts/partials/pages/page.html
+++ b/themes/osuny-school/layouts/partials/pages/page.html
@@ -1,6 +1,10 @@
 <div class="card card--article">
   <div class="card-body">
-    <p class="card-title"><a href="{{ .Permalink }}" class="stretched-link link link--more">{{ htmlUnescape .Title }}</a></p>
+    <p class="card-title">
+      <a href="{{ .Permalink }}" class="stretched-link link link--more">
+        {{ safeHTML (partial "CorrectPunctuation" .Title) }}
+      </a>
+    </p>
     {{ if .Params.description }}
       <p class="card-text">{{ truncate 120 .Params.description }}</p>
     {{ end }}
