--- a/themes/osuny-school/layouts/partials/posts/post.html
+++ b/themes/osuny-school/layouts/partials/posts/post.html
@@ -16,7 +16,7 @@
     {{- end -}}
   </div>
   <div class="card-body">
-    <p class="card-title">{{ htmlUnescape .Title }}</p>
+    <p class="card-title">{{ safeHTML (partial "CorrectPunctuation" .Title) }}</p>
     <time datetime="{{ .Date.Format "2006-01-02T15:04" }}">{{ .Date.Format "02 Jan 2006" }}</time>
     <a href="{{ .Permalink }}" class="stretched-link link link--more">En savoir plus</a>
   </div>
