--- a/themes/osuny-school/assets/sass/components/_hero.sass
+++ b/themes/osuny-school/assets/sass/components/_hero.sass
@@ -18,11 +18,12 @@
     &__image
         filter: blur(16px) grayscale(100%)
         height: 100%
-        left: 0
+        left: -1px
         mix-blend-mode: overlay
         object-fit: cover
         opacity: .3
         position: absolute
+        right: -1px
         top: 0
         width: 100%
         .layout-home &
