--- a/themes/osuny-school/layouts/partials/header/hero.html
+++ b/themes/osuny-school/layouts/partials/header/hero.html
@@ -3,6 +3,7 @@
     {{ partial "commons/image.html"
         (dict
           "image"    .image
+          "alt"      .title
           "class"    "hero__image"
           "mobile"   "375x450"
           "tablet"   "768x450"
