--- a/themes/osuny-school/layouts/partials/head/seo.html
+++ b/themes/osuny-school/layouts/partials/head/seo.html
@@ -26,8 +26,8 @@
 <meta name="twitter:description" content="{{ $seoDescription }}">
 <meta name="twitter:image" content="{{ $seoImage }}">
 <meta name="twitter:card" content="summary_large_image">
-{{ if site.Params.social.twitter }}
-<meta name="twitter:site" content="@{{ site.Params.social.twitter }}" />
+{{ if site.Data.school.twitter }}
+<meta name="twitter:site" content="@{{ site.Data.school.twitter }}" />
 {{ end }}
 
 <!-- Icons -->
