--- a/themes/osuny-school/layouts/categories/term.html
+++ b/themes/osuny-school/layouts/categories/term.html
@@ -6,7 +6,17 @@
       ) -}}
 
 <div class="container">
+  {{ if .Content }}
+    <div class="row mb-5">
+      <div class="col-md-8">
+        {{ safeHTML (partial "CorrectPunctuation" .Content) }}
+      </div>
+    </div>
+  {{ end }}
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-5">
+    {{ if not .Pages }}
+      <p>Aucun article dans cette catégorie</p>
+    {{ end }}
     {{ range .Paginator.Pages }}
       <div class="col">
         {{ partial "posts/post.html" . }}
