--- a/themes/osuny-school/layouts/_default/baseof.html
+++ b/themes/osuny-school/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {{- partial "head/css.html" -}}
+    {{ partial "head/css.html" -}}
     {{- partial "head/seo.html" . -}}
   </head>
   <body class="{{ .Type }}__{{ .Kind }}">
