--- a/themes/osuny-school/layouts/partials/head/seo.html
+++ b/themes/osuny-school/layouts/partials/head/seo.html
@@ -1,14 +1,14 @@
-{{ $seoTitle := htmlUnescape site.Title }}
-{{ if .Title }}
-  {{ $seoTitle = printf "%s | %s" (htmlUnescape .Title) $seoTitle }}
-{{ end }}
-{{ $seoDescription := .Params.description | chomp }}
-{{ $seoImage := "/assets/images/share.png" }}
-{{ if .Params.image }}
-  {{ $image := partial "GetMedia" .Params.image}}
-  {{ $seoImage = $image.url }}
-{{ end }}
-{{ $seoUrl := .Permalink }}
+{{- $seoTitle := htmlUnescape site.Title -}}
+{{- if .Title -}}
+  {{- $seoTitle = printf "%s | %s" (chomp (htmlUnescape .Title)) $seoTitle -}}
+{{- end -}}
+{{- $seoDescription := .Params.description | chomp -}}
+{{- $seoImage := "/assets/images/share.png" -}}
+{{- if .Params.image }}
+  {{- $image := partial "GetMedia" .Params.image -}}
+  {{- $seoImage = $image.url -}}
+{{- end -}}
+{{- $seoUrl := .Permalink -}}
 
 <!-- HTML Meta Tags -->
 <title>{{ $seoTitle }}</title>
@@ -26,7 +26,7 @@
 <meta name="twitter:description" content="{{ $seoDescription }}">
 <meta name="twitter:image" content="{{ $seoImage }}">
 <meta name="twitter:card" content="summary_large_image">
-{{ if site.Data.school.twitter }}
+{{- if site.Data.school.twitter }}
 <meta name="twitter:site" content="@{{ site.Data.school.twitter }}" />
 {{ end }}
 
@@ -37,6 +37,8 @@
 <link rel="icon" type="image/png" href="/assets/images/favicons/favicon.ico">
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/assets/images/favicons/safari-pinned-tab.svg" color="#002539">
+
+<!-- App -->
 <meta name="apple-mobile-web-app-title" content="{{ site.Title }}">
 <meta name="application-name" content="{{ site.Title }}">
 <meta name="msapplication-TileColor" content="#ffffff">
