--- a/themes/osuny-school/assets/sass/commons/_pages.sass
+++ b/themes/osuny-school/assets/sass/commons/_pages.sass
@@ -5,11 +5,15 @@
         opacity: .2
 
 .pages__section,
-.pages__page
+.pages__page,
+.administrators__taxonomy,
+.administrators__term
     .hero
         background-color: #176CAF
 
-.programs__section
+.programs__section,
+.teachers__taxonomy,
+.teachers__term
     .hero
         background-color: #CA0051
 
