--- a/themes/osuny-school/layouts/administrators/list.html
+++ b/themes/osuny-school/layouts/administrators/list.html
@@ -15,7 +15,7 @@
             {{ if .Content }}
               <p class="small mb-2">{{ truncate 50 (plainify .Content) }}</p>
             {{ end }}
-            <a href="{{ .Permalink }}" class="stretched-link link link--more">Voir les {{ len .Pages }} articles</a>
+            <a href="{{ .Permalink }}" class="stretched-link link link--more">En savoir plus</a>
           </div>
         </article>
       </div>
