--- a/themes/osuny-school/layouts/programs/list.html
+++ b/themes/osuny-school/layouts/programs/list.html
@@ -59,7 +59,7 @@
           <div class="row row-cols-md-2 g-3">
             {{ range sort .Pages ".Params.position" }}
             <div class="col">
-              <a href="{{ .Permalink }}">{{ safeHTML (partial "CorrectPunctuation" .Title) }}</a>
+              {{ partial "programs/program.html" . }}
             </div>
             {{ end }}
           </div>
