--- a/themes/osuny-school/layouts/persons/single.html
+++ b/themes/osuny-school/layouts/persons/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   {{- partial "header/hero.html"
         (dict
-          "title" "Actualités"
+          "title" .Title
           "context" .
         ) -}}
   <div class="container">
