--- a/themes/osuny-school/layouts/persons/list.html
+++ b/themes/osuny-school/layouts/persons/list.html
@@ -6,6 +6,11 @@
           "context" .
         ) -}}
   <div class="container">
+    <a href="/equipe/editoriale/">Équipe éditoriale</a>
+    <a href="/equipe/administrative/">Équipe administrative</a>
+    <a href="/equipe/recherche/">Équipe de recherche</a>
+    <a href="/equipe/pedagogique/">Équipe pédagogiques</a>
+
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
     {{ range .Pages }}
       <div class="col">
