--- a/themes/osuny-school/layouts/persons/single.html
+++ b/themes/osuny-school/layouts/persons/single.html
@@ -13,9 +13,17 @@
       </div>
     {{ end }}
 
+    {{ if in .Params.roles "author" }}
     <a href="actualites/">Actualités</a>
+    {{ end }}
+    {{ if in .Params.roles "teacher" }}
     <a href="formations/">Missions pédagogiques</a>
+    {{ end }}
+    {{ if in .Params.roles "administrator" }}
     <a href="administration/">Missions administratives</a>
+    {{ end }}
+    {{ if in .Params.roles "researcher" }}
     <a href="publications/">Publications scientifiques</a>
+    {{ end }}
   </div>
 {{ end }}
