--- a/themes/hugo-osuny/assets/sass/bootstrap/_dropdown.sass
+++ b/themes/hugo-osuny/assets/sass/bootstrap/_dropdown.sass
@@ -1,7 +1,7 @@
 .dropdown
     &-toggle
         &:after
-            background: url(/assets/images/icon-caret.svg) no-repeat
+            background: url('/assets/images/icons.svg#caret') no-repeat
             content: ''
             display: inline-block
             height: 6px
