--- a/themes/hugo-osuny/layouts/partials/header/hero.html
+++ b/themes/hugo-osuny/layouts/partials/header/hero.html
@@ -5,9 +5,9 @@
           "image"    .image
           "alt"      .title
           "class"    "hero__image"
-          "mobile"   "375x450"
-          "tablet"   "768x450"
-          "desktop"  "x450"
+          "mobile"   "351x168"
+          "tablet"   "456x219"
+          "desktop"  "856x410"
           "lazy"     false
         ) }}
   {{ end -}}
