--- a/themes/hugo-osuny/layouts/posts/single.html
+++ b/themes/hugo-osuny/layouts/posts/single.html
@@ -37,14 +37,9 @@
             <tr>
               <th scope="row" class="ps-0">Partager sur</th>
               <td class="pe-0">
-                <a href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" target="_blank" rel="noreferrer" aria-label="Facebook">
-                  <svg aria-hidden="true" width="20" height="20"><use xlink:href="/assets/images/icons.svg#facebook"></use></svg></a>
-                <a class="ms-3" href="https://www.linkedin.com/sharing/share-offsite/?url={{ .Permalink }}" target="_blank" rel="noreferrer" aria-label="Linkedin">
-                  <svg aria-hidden="true" width="18" height="18"><use xlink:href="/assets/images/icons.svg#linkedin"></use></svg>
-                </a>
-                <a class="ms-3" href="https://twitter.com/intent/tweet?text={{ .Title }} {{ .Permalink }}" target="_blank" rel="noreferrer" aria-label="Twitter">
-                  <svg aria-hidden="true" width="21" height="17"><use xlink:href="/assets/images/icons.svg#twitter"></use></svg>
-                </a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}" target="_blank" rel="noreferrer" aria-label="Facebook"><svg aria-hidden="true" width="20" height="20"><use xlink:href="/assets/images/icons.svg#facebook"></use></svg></a>
+                <a class="ms-3" href="https://www.linkedin.com/sharing/share-offsite/?url={{ .Permalink }}" target="_blank" rel="noreferrer" aria-label="Linkedin"><svg aria-hidden="true" width="18" height="18"><use xlink:href="/assets/images/icons.svg#linkedin"></use></svg></a>
+                <a class="ms-3" href="https://twitter.com/intent/tweet?text={{ .Title }} {{ .Permalink }}" target="_blank" rel="noreferrer" aria-label="Twitter"><svg aria-hidden="true" width="21" height="17"><use xlink:href="/assets/images/icons.svg#twitter"></use></svg></a>
               </td>
             </tr>
           </tbody>
