--- a/themes/hugo-osuny/assets/sass/commons/_defaults.sass
+++ b/themes/hugo-osuny/assets/sass/commons/_defaults.sass
@@ -1,11 +1,17 @@
+body
+    -moz-osx-font-smoothing: grayscale
+    -webkit-font-smoothing: antialiased
+    font-variant-ligatures: discretionary-ligatures
+    text-rendering: optimizelegibility
+
 ::selection
-    background: rgba($primary, .7)
-    color: $white
+    background: rgba(0, 0, 0, .7)
+    color: white
     text-shadow: none
 
 ::-moz-selection
-    background: rgba($primary, .7)
-    color: $white
+    background: rgba(0, 0, 0, .7)
+    color: white
     text-shadow: none
 
 img
