--- a/assets/sass/commons/_pages.sass
+++ b/assets/sass/commons/_pages.sass
@@ -1,3 +1,6 @@
+.hero
+    background-color: $site
+
 .page__home
     .hero__image
         filter: none
@@ -9,13 +12,13 @@
 .administrators__taxonomy,
 .administrators__term
     .hero
-        background-color: #176CAF
+        background-color: $institut
 
 .programs__section,
 .teachers__taxonomy,
 .teachers__term
     .hero
-        background-color: #CA0051
+        background-color: $diplomes
 
 .posts__section,
 .posts__page,
@@ -24,4 +27,4 @@
 .authors__taxonomy,
 .authors__term
     .hero
-        background-color: #007960
+        background-color: $post
