--- a/assets/sass/commons/_variables.sass
+++ b/assets/sass/commons/_variables.sass
@@ -1,15 +1,19 @@
+// Site variables
+$site:      #002539
+$institut:  #176CAF
+$diplomes:  #CA0051
+$post:      #007960
+$recherche: #EB7100
+$font-family-serif: 'Novela'
+
+
+// Bootstrap variables
 $black: #000000
 $white: #FFFFFF
 $light: #ECECEC
 $primary: $black
 $body-bg: $white
 $body-color: $black
-
-$site: #002539
-$institut: #176CAF
-$diplomes: #CA0051
-$post: #007960
-$recherche: #EB7100
 
 $border-radius: 0
 $border-radius-lg: 0
@@ -18,7 +22,6 @@ $border-radius-sm: 0
 $grid-gutter-width: 1.5rem
 
 $font-family-sans-serif: 'Aestetico'
-$font-family-serif: 'Novela'
 $font-family-base: $font-family-serif
 $font-size-root: 1rem
 $font-size-base: 1.125rem
