--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -4,4 +4,5 @@
 @import "commons/fonts"
 @import "commons/typography"
 @import "commons/pages"
+@import "custom/components/header"
 @import "custom/components/hero"
