--- a/assets/sass/commons/_pages.sass
+++ b/assets/sass/commons/_pages.sass
@@ -1,5 +1,8 @@
 .hero
     background-color: $site
+.toc
+    .active
+        color: $site
 
 .page__home
     .hero__image
@@ -13,12 +16,18 @@
 .administrators__term
     .hero
         background-color: $institut
+    .toc
+        .active
+            color: $institut
 
 .programs__section,
 .teachers__taxonomy,
 .teachers__term
     .hero
         background-color: $diplomes
+    .toc
+        .active
+            color: $diplomes
 
 .posts__section,
 .posts__page,
@@ -28,3 +37,6 @@
 .authors__term
     .hero
         background-color: $post
+    .toc
+        .active
+            color: $post
