--- a/assets/sass/commons/_variables.sass
+++ b/assets/sass/commons/_variables.sass
@@ -59,11 +59,16 @@ $navbar-brand-margin-end: 0
 $navbar-padding-y: $grid-gutter-width
 $navbar-nav-link-padding-x: 1rem
 
-$table-th-font-weight: 400
+$pagination-border-width: 0
+$pagination-active-bg: transparent
+$pagination-active-color: rgba(black, .65)
+$pagination-disabled-color: #DADADA
 
 $spacer: 1rem
 $spacers: (0: 0, 1: $spacer / 4, 2: $spacer / 2, 3: $spacer, 4: $spacer * 1.5, 5: $spacer * 3)
 $spacers-custom: (6: $spacer * 6)
 $spacers: map-merge($spacers, $spacers-custom)
+
+$table-th-font-weight: 400
 
 $enable-caret: false
