--- a/assets/sass/commons/_variables.sass
+++ b/assets/sass/commons/_variables.sass
@@ -65,9 +65,7 @@ $pagination-active-color: rgba(black, .65)
 $pagination-disabled-color: #DADADA
 
 $spacer: 1rem
-$spacers: (0: 0, 1: $spacer / 4, 2: $spacer / 2, 3: $spacer, 4: $spacer * 1.5, 5: $spacer * 3)
-$spacers-custom: (6: $spacer * 6)
-$spacers: map-merge($spacers, $spacers-custom)
+$spacers: (0: 0, 1: $spacer / 2, 2: $spacer, 3: $spacer * 2, 4: $spacer * 3, 5: $spacer * 6)
 
 $table-th-font-weight: 400
 
