--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -6,3 +6,4 @@
 @import "commons/pages"
 @import "custom/components/header"
 @import "custom/components/hero"
+@import "custom/components/bootstrap/card"
