--- a/assets/sass/custom/components/bootstrap/card.sass
+++ b/assets/sass/custom/components/bootstrap/card.sass
@@ -1,3 +1,8 @@
 .card
     &-media
         border: 1px solid $border-color
+
+    &--person
+        .card
+            &-text
+                font-style: italic
