--- a/assets/sass/commons/_variables.sass
+++ b/assets/sass/commons/_variables.sass
@@ -34,7 +34,7 @@ $headings-margin-bottom: $grid-gutter-width
 $headings-font-weight: 400
 
 $breadcrumb-font-size: px2rem(13)
-$breadcrumb-active-color: $white
+$breadcrumb-active-color: rgba($white, .8)
 $breadcrumb-divider-color: $white
 $breadcrumb-margin-bottom: 0
 
