--- a/assets/sass/custom/components/_hero.sass
+++ b/assets/sass/custom/components/_hero.sass
@@ -1,6 +1,7 @@
 .hero
+    background-color: $site
     @include media-breakpoint-up(md)
-        background-image: url(/assets/images/glyph.svg)
+        background-image: url('/assets/images/glyph.svg')
         background-position: right
         background-repeat: no-repeat
         background-size: auto 100%
