--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,9 +1,13 @@
-@import "tools/functions/px2rem"
-@import "commons/variables"
+@import "abstracts/functions/px2rem"
+@import "abstracts/variables"
 @import "hugo-osuny"
-@import "commons/fonts"
-@import "commons/typography"
-@import "commons/pages"
-@import "custom/components/header"
+@import "base/fonts"
+@import "base/typography"
+@import "custom/layout/header"
 @import "custom/components/hero"
+@import "custom/components/toc"
 @import "custom/components/bootstrap/card"
+@import "pages/home"
+@import "pages/news"
+@import "pages/pages"
+@import "pages/programs"
