--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -3,6 +3,7 @@
 @import "hugo-osuny"
 @import "base/fonts"
 @import "base/typography"
+@import "custom/layout/footer"
 @import "custom/layout/header"
 @import "custom/components/hero"
 @import "custom/components/toc"
