--- a/layouts/partials/header/logo.html
+++ b/layouts/partials/header/logo.html
@@ -1,1 +1,1 @@
-<a class="navbar-brand" href="{{ site.BaseURL }}"><img src="/assets/images/logo.svg" alt="{{ site.Title }}" height="42" width="147"></a>
+<a class="logo" href="{{ site.BaseURL }}"><img src="/assets/images/logo.svg" alt="{{ site.Title }}" height="42" width="147"></a>
