--- a/assets/sass/custom/layout/_header.sass
+++ b/assets/sass/custom/layout/_header.sass
@@ -3,5 +3,8 @@ header[role="banner"]
         font-size: px2rem(18)
         @include media-breakpoint-down(lg)
             font-size: px2rem(20)
-            padding-bottom: 10px
-            padding-top: 10px
+            padding-bottom: px2rem(10)
+            padding-top: px2rem(10)
+    @include media-breakpoint-up(md)
+      .navbar-nav
+          margin-right: -$navbar-nav-link-padding-x
